# cmake_test

./: README.md
demo1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo1  main.c
demo2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo2  main.c
demo3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
demo3/math/: CMakeLists.txt  Makefile  MathFunctions.c  cmake_install.cmake
demo4/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo4  main.cc
demo4/math/: Makefile  MathFunctions.h  cmake_install.cmake
